<resources>
    <string name="app_name">Seeds Impact</string>
    <string name="app_no_internet">No Internet Connection</string>
    <string name="app_allow">allow</string>
    <string name="app_info">Information !</string>
    <string name="terms_conditions"><![CDATA[The IPs will use this Application to collect and report weekly progress made in estate. The form should be filled in by the IP for each estate covered in the week and submit to WSAF team by end of the week. All questions are mandatory for response unless mentioned otherwise. The IP has to collect and submit the date once in a week for each estate. If there are multiple estates under an IP the form should be filled out seperately for each estate. This form will be used to collect data of activities conducted in a week in a particular tea estate. A new form should be filled out for each tea estate.]]></string>
    <string name="app_ok">Ok</string>
    <string name="app_yes">Yes</string>

    <string name="app_wallet_balance">Wallet Balance</string>
    <string name="app_transaction_history">Transaction History</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="start_new_activity">Start New Activity</string>
    <string name="app_acknowledge">Acknowledge</string>
    <string name="app_please_acknowledge_this_message_before_moving_ahead">Please acknowledge this message before moving ahead.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="something_wrong">Something went wrong, please try again after sometime.</string>
    <string name="ok">Ok</string>
    <string name="message">Message</string>
    <string name="error_something_wrong">Something went wrong</string>
    <string name="generalInfoCat">General information about the IP and tea estate</string>
    <string name="activityInfoCat">Activity Level Information</string>
    <string name="stackInfoCat">StackHolder Information</string>
    <string name="KpiInfoCat">KPI (Activity Information)</string>
    <string name="spinner_estate_selection">Select name of tea estate</string>
    <string name="log_in">Log in</string>
    <string name="location_of_tea_estate">Location of tea estate</string>
    <string name="what_is_the_name_of_tea_estate">What is the name of tea estate</string>
    <string name="save_as_draft">Save as Draft</string>
    <string name="save_continue"><![CDATA[Save & Continue]]></string>
    <string name="location_of_the_tea_estate">Location Of The Tea Estate</string>
    <string name="general_information_about_the_ip_and_tea_estate">General information about the IP and tea estate</string>
    <string name="app_activity_level_information">Activity Level Information</string>
    <string name="app_has_pra_been_conducted_in_this_tea_estate">Has PRA Been Conducted In This Tea Estate?</string>
    <string name="app_please_note_this_question_should_be_answered_yes_only_for_the_first_time_a_pra_conducted_in_an_estate_for_the_other_weeks_you_can_make_the_response_as_no">Please note this question should be answered Yes only for the first time a PRA is conducted in an estate. For other weeks you can mark the response as No.</string>
    <string name="if_yes_please_specify_the_number_of_estate_management_who_participated_in_the_pra">If Yes, Please Specify The Number Of Estate Management Who Participated In The PRA?</string>
    <string name="if_yes_please_specify_the_number_of_estate_staff_who_participated_in_the_pra">If Yes, Please Specify The Number Of Estate Staff Who Participated In The PRA?</string>
    <string name="if_yes_please_specify_the_number_of_estate_sub_staff_who_participated_in_the_pra">If Yes, Please Specify The Number Of Estate Sub-Staff Who Participated In The PRA?</string>
    <string name="if_yes_please_specify_the_number_of_estate_workers_who_participated_in_the_pra">If Yes, Please Specify The Number Of Estate Workers Who Participated In The PRA?</string>
    <string name="if_yes_please_specify_the_number_of_estate_community_members_who_participated_in_the_pra">If Yes, Please Specify The Number Of Estate Community Members Who Participated In The PRA?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>


    <string name="txt_1">External Stakeholder Consultation</string>
    <string name="txt_2">Training on POSH, DV, POCSO, legal support and justice system</string>
    <string name="txt_3">Workshop on Preparation of SoPs at Estate level</string>
    <string name="txt_4">Training of Management, staff and workers on Gender Sensitisation</string>
    <string name="txt_5">Workshop to identify and appoint estate level First Information Persons (FIP), reporting and record keeping systems</string>
    <string name="txt_6">Training of Beneficiary Leads - on Gender and VAW</string>
    <string name="txt_7">Leadesrship Trainining for Women Workers</string>
    <string name="txt_8">Facilitation of formation of Informal groups</string>
    <string name="txt_9">Leadership training of women staff</string>
    <string name="txt_10">Safety Audit Training, activity</string>
    <string name="txt_11">Training and interaction with youth clubs/ groups and men workers</string>
    <string name="txt_12">Activities with Ally groups</string>
    <string name="txt_13">ToT with staff to create awareness and plan regular activities to prevent VAW in the workplace</string>
    <string name="txt_14">Awareness creation of workers by Beneficiary Leads</string>
    <string name="txt_15">Community and Family engagement</string>
    <string name="txt_16">Identification and ToT of women leaders to create awareness in communities</string>
    <string name="txt_17">Visits by Local Opinion Leaders, Role Models, Motivational talk and demonstration of successful case studies</string>
    <string name="txt_18">UNMUTE</string>
    <string name="please_select_the_activities_conducted_in_this_week_in_the_estate">Please Select The Activities Conducted In This Week In The Estate?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="stack_info_text">StackHolders For The Activites Conducted In This Week In The Estate</string>
    <string name="stackholders_for_the_activites_conducted_in_this_week_in_the_estate">StackHolders For The Activites Conducted In This Week In The Estate</string>
    <string name="please_mention_the_current_status_of_the_activity_in_the_estate">Please Mention The Current Status Of The Activity In The Estate</string>
    <string name="completed">Completed</string>
    <string name="in_progress">In progress</string>
    <string name="delayed">Delayed</string>
    <string name="at_risk">At risk</string>
    <string name="specify_activity_dates_below">Specify Activity Dates Below</string>
    <string name="specify_activity_start_date">Specify activity start date</string>
    <string name="specify_activity_end_date">Specify activity end date</string>
    <string name="how_many_meetings_were_conducted_with_district_level_officers_in_this_week">How Many Meetings Were Conducted With District Level Officers In This Week?</string>
    <string name="if_no_meetings_were_held_please_enter_0">If no meetings were held please enter 0</string>
    <string name="how_many_meetings_were_conducted_with_government_department_e_g_social_welfare_health_police_labor_union_in_this_week">How Many Meetings Were Conducted With Government Department – E.G. Social Welfare, Health, Police, Labor Union In This Week?</string>
    <string name="how_many_meetings_were_conducted_with_one_stop_centers_in_this_week">How Many Meetings Were Conducted With One Stop Centers In This Week?</string>
    <string name="how_many_meetings_were_conducted_with_dlsa_in_this_week">How Many Meetings Were Conducted With DLSA In This Week?</string>
    <string name="how_many_meetings_were_conducted_with_registered_empaneled_csos_in_this_week">How Many Meetings Were Conducted With Registered/Empaneled CSOs In This Week?</string>
    <string name="how_many_meetings_were_conducted_with_any_other_services_providers_in_this_week">How Many Meetings Were Conducted With Any Other Services Providers In This Week?</string>
    <string name="can_you_please_elaborate_on_the_discussion_topics_for_the_meetings_with_these_district_level_officers_and_other_service_providers">Can You Please Elaborate On The Discussion Topics For The Meetings With These District Level Officers And Other Service Providers?</string>
    <string name="write_below_in_the_textarea">Write below in the textarea</string>
    <string name="please_share_pictures_from_the_activity_conducted">Please Share Pictures From The Activity Conducted</string>
    <string name="please_share_attendance_pictures_from_the_activity_conducted">Please Share Attandance Pictures From The Activity Conducted</string>
    <string name="please_upload_photos_max_3">Please upload photos (max 3)</string>
    <string name="choose_file">Choose File</string>
    <string name="kpi_activity_information">KPI (Activity Information)</string>
    <string name="external_stakeholder_consultaion">EXTERNAL STAKEHOLDER CONSULTAION</string>

    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>

    <string name="remove_profile_photo">Remove pic</string>

    <string name="please_select">Please select</string>
    <string name="error_permissions">Some permissions are denied</string>
    <string name="permission_denied">Permission denied</string>

    <string name="intent_exception_message">Camera is not supported on this device</string>
    <string name="camera_intent_error">No camera app found</string>
    <string name="alert">Alert!</string>
    <string name="stackholder_error">Please Submit Stackholder Information First</string>
    <string name="comments_observations">Comments/Observations</string>
    <string name="submit_to_server">Submit to Server</string>
    <string name="social_empowerment_and_economic_development_society">Social Empowerment and Economic Development Society</string>
    <string name="go_to_dashboard"><u>Go to Dashboard</u></string>

</resources>