<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/include"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@android:color/transparent"
            android:padding="@dimen/margin_5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_5dp"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:tint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/walletBalance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_wallet_balance"
            android:textColor="@color/white"
            android:textSize="@dimen/margin_14dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWtran_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/margin_22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/walletBalance" />


        <LinearLayout
            android:id="@+id/llRoot"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_48dp"
            android:background="@drawable/recycler_backgroundtopleft_round"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/include">



            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20dp"
                android:layout_marginEnd="@dimen/margin_20dp"
                android:text="General information about the IP and tea estate "
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:layout_marginTop="@dimen/margin_20dp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20dp"
                android:layout_marginEnd="@dimen/margin_20dp"
                android:text="@string/what_is_the_name_of_tea_estate"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_14sp"
                android:layout_marginTop="@dimen/margin_15dp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20dp"
                android:layout_marginEnd="@dimen/margin_20dp"
               android:layout_marginTop="@dimen/margin_10dp"
                android:padding="@dimen/margin_5dp"
                android:background="@drawable/spinner_bg">

                <Spinner
                    android:id="@+id/spinnerEstate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:spinnerMode="dropdown" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_withdraw_down_arrow" />

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20dp"
                android:layout_marginEnd="@dimen/margin_20dp"
                android:text="@string/location_of_tea_estate"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_14sp"
                android:layout_marginTop="@dimen/margin_15dp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20dp"
                android:layout_marginEnd="@dimen/margin_20dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:padding="@dimen/margin_5dp"
                android:background="@drawable/spinner_bg">

                <Spinner
                    android:id="@+id/spinnerEstateDistrict"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:spinnerMode="dropdown" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_withdraw_down_arrow" />

            </RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_margin="@dimen/margin_20dp"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/btnSaveDraft"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_enable_bg"
        android:backgroundTint="@color/btn_draft_color"
        android:gravity="center"
        android:text="@string/save_as_draft"
        android:textAllCaps="false"
        android:enabled="false"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_16sp" />
    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_gravity="center"
    android:layout_marginStart="@dimen/margin_15dp"
        android:background="@drawable/btn_enable_bg"
        android:gravity="center"
        android:text="@string/save_continue"
        android:textAllCaps="false"
        android:enabled="false"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_16sp" />

</LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>